managing course contents and topics for instructors done

--- a/courses/templates/courses/manage/topic/formset.html
+++ b/courses/templates/courses/manage/topic/formset.html
@@ -10,7 +10,7 @@ Edit "{{ course.title }}"
         {{ formset }}
         {{ formset.management_form }}
         {% csrf_token %}
-        <input type="submit" value="Save Topics"
+        <input type="submit" value="Save Topics">
     </form>
 </div>
 {% endblock content %}
