--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <title>{% block title %}Infinity Hub{% endblock %}</title>
         <link href="{% static "css/base.css" %}" rel="stylesheet">
+        <link href="{% static "css/form.css" %}" rel="stylesheet">
     </head>
     <body>
         <div id="header">
