--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -22,6 +22,20 @@
             {% block content %}
             {% endblock content %}
         </div>
+        <footer>
+            <div class="container">
+                <div class="footer-left">
+                    <p>© 2023 Infinity Hub</p>
+                </div>
+                <div class="footer-right">
+                    <ul class="footer-menu">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script>
