--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load cache %}
 {% block title %}
 {{ object.title }}
 {% endblock title %}
@@ -26,11 +27,13 @@
     </ul>
 </div>
 <div class="topic">
+    {% cache 600 topic_contents topic%}
     {% for content in topic.contents.all %}
-    {% with item=content.item %}
-    <h2>{{ item.title }}</h2>
-    {{ item.render }}
-    {% endwith %}
+        {% with item=content.item %}
+            <h2>{{ item.title }}</h2>
+                {{ item.render }}
+        {% endwith %}
     {% endfor %}
+    {% endcache %}
 </div>
 {% endblock content %}
