--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -6,6 +6,7 @@
         <title>{% block title %}Infinity Hub{% endblock %}</title>
         <link href="{% static "css/base.css" %}" rel="stylesheet">
         <link href="{% static "css/form.css" %}" rel="stylesheet">
+        {% block header %}{% endblock header %}
     </head>
     <body>
         <div id="header">
