--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -13,5 +13,9 @@
 </div>
 {% endblock content %}
 
-{% block domready %}
-{% endblock domready %}
+{% block scripts %}
+<script>
+    const url = 'ws://' + window.location.host + '/ws/chat/room/' + '{{ course.id }}/';
+    const chatSocket = new WebSocket(url);
+</script>
+{% endblock scripts %}
