--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -39,11 +39,6 @@
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script>
-            $(document).ready(function(){
-                {% block domready %}
-                {% endblock domready %}
-            })
-        </script>
+        {% block scripts %}{% endblock scripts %}
     </body>
 </html>
