--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -32,11 +32,13 @@
                     <ul class="footer-menu">
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact us</a></li>
+                        <li><a href="#">Courses</a></li>
+                        <li><a href="#">Instructors</a></li>
+                        <li><a href="#">Register</a></li>
                     </ul>
                 </div>
             </div>
         </footer>
-        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         {% block scripts %}{% endblock scripts %}
