context to messages

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -21,9 +21,20 @@
     chatSocket.onmessage = function(e){
         let data = JSON.parse(e.data);
         let message = data.message;
+        let dateOptions = {hour: 'numeric', minute: 'numeric', hour12: true};
+        let datetime = new Date(data['datetime']).toLocaleString('en', dateOptions);
+        let isMe = data.user === '{{ request.user }}';
+        let source = isMe ? 'me' : 'other';
+        let name = isMe ? 'Me' : data.user;
 
         let $chat = $('#chat')
-        $chat.append('<div class="message">' + message + "</div>");
+        $chat.append(
+            '<div class="message ' + source + '">' +
+            '<strong>' + name + '</strong> ' +
+            '<span class="date">' + datetime + '</span><br>' +
+            message +
+            '</div>'
+        );
         $chat.scrollTop($chat[0].scrollHeight);
     };
 
